# ResearchMyPDF

./: .gitignore  README.md  main.py  pyproject.toml
src/: export.py  extract.py  ingest.py  summarize.py
src/providers/: base.py  ollama.py  ollama_provider.py
