[project]
name = "researchmypdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]
[tool.uv]
src = ["src"]
dependencies = [
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "rich>=14.3.4",
    "typer>=0.24.1",
]
